--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=qrlogin
+
+# Import .env file
+spring.config.import=optional:file:.env[.properties]
+
+# JWT
+spring.jwt.secret=${JWT_SECRET}
+
+app.url.front=${FRONT_URL}
